# geoserde

./: .editorconfig  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  rust.yml  test.yml
derive/: Cargo.toml
derive/src/: de.rs  lib.rs
examples/: 0-inline-de.rs  1-feature-separate.rs  1-feature-serde.rs  1-feature.rs  1-geozero.rs  1-serde_rename.rs  1-serde_with.rs  1-struct_properties.rs  2-at-once.rs  2-feature.rs  2-serde_with.rs  deserialize.rs  geometry0.rs  geometry0a.rs  geometry1b.rs  geometry1c.rs  geometry1d.rs  geometry1e.rs  geometry2.rs  macro.rs  serialize.rs
examples/v2/: de.rs  main.rs
macros/: Cargo.toml  README.md
macros/src/: de.rs  lib.rs
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
prototype-v0_6/: Cargo.toml
prototype-v0_6/tests/: 0-inline-de.rs  1-constrailt.rs  1-generalize.rs  1-geozero.rs  2-feature.rs
src/: feature.rs  geom.rs  geometry.rs  geoserde.rs  lib.rs  v0_6.rs
src/de/: geom.rs  mod.rs  prop.rs
src/ser/: err.rs  feat.rs  geom.rs  mod.rs  prop.rs  sink.rs
src/v0_5/: err.rs  geom.rs  mod.rs  prop.rs  sink.rs
src/v0_6/: fgb.rs  geo.rs  json.rs  shp.rs
src/v0_6/fgb/: map.rs  prop.rs  prop2_.rs
src/v2/: de.rs  mod.rs  ser.rs
src/v2/de/fmt/: json.rs  mod.rs  shp.rs
src/v2/de/fmt/fgb/: feat.rs  mod.rs
src/v2/de/fmt/geozero/: map.rs  prop.rs
src/v2/fmt/: fgb.rs  geozero.rs  json.rs  mod.rs  shp.rs
src/v2/fmt/geozero/: map.rs  mod.rs  prop.rs
tests/: coord.rs  fgb.rs  flatgeobuf.rs  flatten.rs  geojson.rs  geometry_detection.rs  line.rs  line_string.rs  mod.rs  nested.rs  panic.rs  point.rs  polygon.rs  property_array.rs  rect.rs  serialize_flatten.rs  shapefile.rs  testing.rs
tests/v0_5/: feature_serializer.rs  fgb.rs  line.rs  line_string.rs  mod.rs  point.rs  polygon.rs  property_array.rs  rect.rs
tests/v0_6/: csv.rs  fgb_nested.rs  flatgeobuf.rs  geojson.rs  mod.rs  shp.rs
tests/v0_6/sample/: a.csv  a.geojson  a.geojsonl  a.gpkg  a.shp  a.shx
tests/v2/: duplicate_field.rs  fgb.rs  geojson.rs  mod.rs  shp.rs
tests/v2/sample/: a.dbf  a.fgb
